# set-up

./: .env.example  .gitignore  :w  ;w  Cargo.toml  Dockerfile  README.md  fly.toml  set-up.tar
.github/workflows/: ci-backend.yml  ci-client.yml  ci.yml  clippy.yml  publish.yml  railway.yml  release-client.yml
migrations/: 001_create_events_table.sql
src/: client.rs  config.rs  context.rs  events.rs  main.rs  message.rs  server.rs  test.rs
src/application/: client_service.rs  mod.rs  room_service.rs
src/application/client/: events.rs  service.rs
src/application/game/: service.rs
src/application/room/: events.rs  mod.rs  service.rs
src/application/services/: card.rs  game.rs
src/client/: client.rs  entity.rs  manager.rs  mod.rs  websocket.rs
src/domain/: client.rs  events.rs  message.rs  mod.rs  room.rs
src/domain/card/: entity.rs  repository.rs
src/domain/game/: card.rs  deck.rs  game.rs  hand.rs  mod.rs  player.rs  repository.rs  set.rs  stock.rs
src/game/: card.rs  deck.rs  game.rs  mod.rs  player.rs
src/handlers/: client.rs  game.rs  mod.rs
src/infra/: ba.rs  error.rs  event_emmiter.rs  mod.rs  server.rs
src/presentation/: http_server.rs  mod.rs  websocket_server.rs
src/presentation/http/: client.rs  game.rs  mod.rs  room.rs  server-back.rs  server.rs
src/presentation/http/websocket/: controller.rs
src/presentation/ws/: event_emmiter.rs  handler.rs  mod.rs
src/room/: manager.rs  mod.rs
src/server/: mod.rs  server.rs
src/server/handlers/: asset.rs  client.rs  mod.rs  room.rs  static_files.rs  websocket.rs
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/public/: star.gltf
web/public/fonts/: General_Sans_Semibold_Regular.json
web/src/: App.css.ts  App.tsx  consts.ts  main.tsx  store.tsx  types.ts
web/src/assets/: squiggle.tsx
web/src/components/: Confetti.tsx
web/src/components/3DSet/: 3DSet.tsx
web/src/components/Avatar/: Avatar.css.ts  Avatar.tsx  AvatarGroup.tsx
web/src/components/Board/: Board.css.ts  Board.tsx
web/src/dialogs/: InvitePlayersDialog.tsx  JoinGameDialog.tsx  NewGameDialog.tsx  Newgame.tsx  ReJoinGameDialog.tsx  RoomJoinGameDialog.tsx
web/src/hooks/: useGameConnection.tsx  useGameSocket.tsx  useIsMobile.tsx  usePrevious.tsx
web/src/menus/: GameMenu.tsx
web/src/models/: card.ts
web/src/routes/: Root.css.ts  Root.tsx  game.css.ts  game.tsx
web/src/services/: appSettingsService.tsx  gameService.tsx  roomService.tsx
web/src/store/: app.ts  audio.ts  cookie.ts  gameManager.ts  gameManager.tsx  index.ts  roomManager.ts  websocket.ts
web/src/styles/: ThemeProvider.css.ts  ThemeProvider.tsx  global.css.ts  index.css.ts
web/src/types/: internal.ts
web/src/util/: cx.ts  deepEqual.ts
(+38 files in other folders)
