[package]
name = "set-up"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
axum = { version = "0.6.18", features = [
  "ws",
  "headers",
  "multipart",
  "macros",
] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
log = { version = "0.4.19", features = ["kv_unstable_std"] }
uuid = { version = "1.3.4", features = ["fast-rng", "v4", "serde"] }
thiserror = "1.0.40"
env_logger = "0.10.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"
tower-http = { version = "0.4.1", features = ["cors"] }
itertools = "0.11.0"
serde_json = "1.0.96"
tokio-stream = "0.1.14"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tungstenite = "0.20.0"
nanoid = "0.4.0"
hyper = "0.14.27"
tower = "0.4.13"
