[package]
name = "set-up"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
axum = { version = "0.6.18", features = [
  "ws",
  "headers",
  "multipart",
  "macros",
] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.4", features = ["fast-rng", "v4", "serde"] }
thiserror = "1.0.40"
lazy_static = "1.4.0"
dotenv = "0.15.0"
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
nanoid = "0.4.0"
hyper = { version = "0.14.27", features = ["full"] }
chrono = { version = "0.4.28", features = ["serde"] }
minicdn = { version = "0.1.20", features = [
  "etag",
  "gzip",
  "brotli",
  "mime",
  "webp",
  "config",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
  "ansi",
  "json",
] }
