[package]
name = "set-up"
version = "0.2.0"
authors = ["Igor Shegolev <igorsheg@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.8.5"
axum = { version = "0.6.18", features = [
  "ws",
  "headers",
  "multipart",
  "macros",
] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.40"
lazy_static = "1.4.0"
dotenv = "0.15.0"
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
hyper = { version = "0.14.27", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
  "ansi",
  "json",
] }
strum = { version = "0.25", features = ["derive"] }
tracing-loki = { version = "0.2.4", default-features = false, features = [
  "rustls",
  "compat-0-2-1",
] }
ahash = "0.8.3"
rust-embed = { version = "8.0.0", features = ["compression"] }
mime_guess = "2.0.4"
async-trait = "0.1.73"
tokio-stream = "0.1.14"
